<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/linear_layout_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linearlayoutmanager"
        android:textSize="20sp" />

    <Button
        android:id="@+id/grid_layout_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gridlayoutmanager"
        android:textSize="20sp" />

    <Button
        android:id="@+id/staggered_grid_layout_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/staggeredgridlayoutmanager"
        android:textSize="20sp" />

</LinearLayout>